@startuml
'https://plantuml.com/class-diagram

abstract class Computer{
    + {abstract} String build
    + {abstract} float value
}
abstract class UpgradePC{

}
UpgradePC ---> Computer: pc
Computer <|--- PC
Computer <|--- UpgradePC
UpgradePC <|-- CPU
UpgradePC <|-- RAM
UpgradePC <|-- Storage
UpgradePC <|-- Screen

@enduml